# safe_footstep_planner

./: .gitignore  CMakeLists.txt  README.md  package.xml
camera_info/: 16042710004.yaml  16091910045.yaml
cfg/: CalcHeightmapGradient.cfg
config/: contours_debug.rviz  database.json  depth_image_creator.rviz  dual_astra.rviz
euslisp/: check_foothold_controller.l  check_foothold_motion.l  draw_meshes.l  foothold_check_experiment.l  look-down.l  polygon-to-mesh.l  simple-polygon-to-mesh.l  touch_wall.l
include/safe_footstep_planner/: safe_footstep_util.h
launch/: color_labeling.launch  depth_image_creator.launch  dual_astra.launch  fcn_labeling.launch  hsv.launch  multi_plane_recognition.launch  play.launch  recoginize_steppable_region.launch  recognize_steppable_region.launch  recognize_steppable_region_choreonoid.launch  record.launch  safe_footstep_operator.launch  sample.launch  steppable_region_choreonoid.launch  tf_interactive_marker.launch
launch/includes/: astra_frames_16091910045.launch
msg/: OnlineFootStep.msg  TargetFoothold.msg
scripts/: calc_heightmap_gradient  costmap_updater  fixed_steppable_polygons_publisher  grad_scale_updater  height_th_updater  known_steppable_contour_publisher  label_to_cost_image  masked_image_to_label  mesh_pub_booster  safe_footstep_operator  static_virtual_camera  virtual_camera_info_publisher.py
src/: calc_heightmap_gradient.cpp  contours_converter.cpp  convert_to_map_coords.cpp  draw_contours.cpp  rect_publisher.cpp  safe_footstep_util.h  steppable_region_publisher.cpp  target_height_publisher.cpp
srv/: CheckFoothold.srv  GetTargetFoothold.srv
